// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Input /> > renders as expected based on provided props 1`] = `
<div>
  <input
    class="outline-none w-full focus-ring px-3 py-1.5 rounded-md border border-lm-input-border dark:border-dm-input-border bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 2`] = `
<div>
  <input
    class="outline-none w-full focus-ring px-3 py-1.5 bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 3`] = `
<div>
  <input
    class="outline-none w-full focus-ring px-3 py-1.5 rounded-md border border-lm-input-border dark:border-dm-input-border bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 4`] = `
<div>
  <input
    class="outline-none w-full focus-ring px-2 py-1 text-sm rounded-md border border-lm-input-border dark:border-dm-input-border bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 5`] = `
<div>
  <input
    class="outline-none w-full focus-ring px-3 py-1.5 rounded-md border border-lm-input-border dark:border-dm-input-border bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 6`] = `
<div>
  <input
    class="outline-none w-full focus-ring px-4 py-2 text-xl rounded-md border border-lm-input-border dark:border-dm-input-border bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 7`] = `
<div>
  <input
    class="outline-none w-full focus-ring-danger px-3 py-1.5 rounded-md border border-danger bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 8`] = `
<div>
  <input
    class="outline-none w-full focus-ring px-3 py-1.5 rounded-md border border-lm-input-border dark:border-dm-input-border bg-lm-disabled-input dark:bg-dm-disabled-input"
    disabled=""
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 9`] = `
<div>
  <input
    class="outline-none w-full focus-ring px-3 py-1.5 rounded-md border border-lm-input-border dark:border-dm-input-border bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
    readonly=""
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 10`] = `
<div>
  <input
    class="outline-none w-full focus-ring px-3 py-1.5 rounded-md border border-lm-input-border dark:border-dm-input-border bg-lm-disabled-input dark:bg-dm-disabled-input"
    disabled=""
    readonly=""
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 11`] = `
<div>
  <input
    class="outline-none"
  />
</div>
`;
